# twitch-tools

./: Cargo.toml  README.md
sound-fx-3000/: Cargo.toml
sound-fx-3000/src/: lib.rs  main.rs  output.rs  sound.rs
todo-app/: Cargo.toml
todo-app/src/: config.rs  main.rs  model.rs  todo.rs
twitch-api/: Cargo.toml
twitch-api/src/: channel.rs  chat.rs  client.rs  config.rs  error.rs  follower.rs  lib.rs  macros.rs  pagination.rs  secret.rs  stream.rs  user.rs
twitch-api/src/auth/: mod.rs  token_manager.rs
twitch-api/src/events/: chat.rs  follow.rs  mod.rs  stream.rs  subscription.rs  types.rs  ws.rs
twitch-api/src/events/chat/: message.rs  mod.rs  notification.rs
twitch-chat/: Cargo.toml
twitch-chat/src/: chat.rs  cmd.rs  config.rs  main.rs  sound_system.rs  store.rs  twitch.rs
