[package]
name = "sound-fx-3000"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.24", features = ["derive"] }
libpulse-binding = "2.28.2"
libpulse-simple-binding = "2.28.1"
symphonia = { version = "0.5.4", default-features = false, features = ["mp3"] }
zerocopy = "0.8.14"
