[package]
name = "twitch-api"
version = "0.1.0"
edition = "2024"

[features]
no-mock = []

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
futures = "0.3.31"
indexmap = { version = "2.7.0", features = ["serde"] }
reqwest = { version = "0.12.12", features = ["http2", "json", "rustls-tls-native-roots"], default-features = false }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["rt"] }
tokio-tungstenite = { version = "0.26.1", features = ["rustls-tls-webpki-roots"] }
toml = { version = "0.8.19", features = ["preserve_order"] }
url = { version = "2.5.4", features = ["serde"] }
