[package]
name = "twitch-chat"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.23", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["rt"] }
toml = { version = "0.8.19", features = ["preserve_order"] }
twitch-api = { version = "0.1.0", path = "../twitch-api" }
