[package]
name = "twitch-chat"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
chrono = "0.4.39"
chrono-tz = "0.10.0"
clap = { version = "4.5.23", features = ["derive"] }
crokey = "1.1.0"
crossterm = { version = "0.28.1", features = ["event-stream"] }
directories = "6.0.0"
futures = "0.3.31"
nucleo = "0.5.0"
ratatui = { version = "0.29.0", features = ["unstable-rendered-line-info"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
sound-fx-3000 = { version = "0.1.0", path = "../sound-fx-3000" }
tokio = { version = "1.43.0", features = ["rt", "sync"] }
toml = { version = "0.8.19", features = ["preserve_order"] }
twitch-api = { version = "0.1.0", path = "../twitch-api" }
